[tool.poetry]
name = "socialplanner"
version = "0.1.0"
description = "Social forces motion planner for point robots."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
urdfenvs = "^0.4.0"
pysocialforce = "^1.1.2"
motion-planning-scenes = "^0.3.0"
numpy = "<1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
